<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/dialog_llyt"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/dialog_title"
        android:text="@string/detail"/>

    <View style="@style/line_blue"/>

    <LinearLayout style="@style/record_detail_item_llyt">

        <TextView
            style="@style/record_detail_title"
            android:text="@string/file_name"/>

        <TextView
            android:id="@+id/tvFileName"
            style="@style/record_detail_content"/>
    </LinearLayout>

    <LinearLayout style="@style/record_detail_item_llyt">

        <TextView
            style="@style/record_detail_title"
            android:text="@string/file_format"/>

        <TextView
            android:id="@+id/tvFileFormat"
            style="@style/record_detail_content"/>
    </LinearLayout>

    <LinearLayout style="@style/record_detail_item_llyt">

        <TextView
            style="@style/record_detail_title"
            android:text="@string/file_size"/>

        <TextView
            android:id="@+id/tvFileSize"
            style="@style/record_detail_content"/>
    </LinearLayout>

    <LinearLayout style="@style/record_detail_item_llyt">

        <TextView
            style="@style/record_detail_title"
            android:text="@string/alter_time"/>

        <TextView
            android:id="@+id/tvModifyTime"
            style="@style/record_detail_content"/>
    </LinearLayout>

    <LinearLayout style="@style/record_detail_item_llyt">

        <TextView
            style="@style/record_detail_title"
            android:text="@string/play_duration"/>

        <TextView
            android:id="@+id/tvPlayDuration"
            style="@style/record_detail_content"/>
    </LinearLayout>

    <LinearLayout style="@style/record_detail_item_llyt">

        <TextView
            style="@style/record_detail_title"
            android:text="@string/save_path"/>

        <TextView
            android:id="@+id/tvSavePath"
            style="@style/record_detail_content"
            android:textIsSelectable="true"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRoger"
        style="@style/single_btn"
        android:layout_height="40dp"/>

</LinearLayout>