<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">


        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textColor="@color/black0"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/etOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@null"
                android:hint="@string/please_input_old_password"
                android:padding="20dp"
                android:autofillHints="" />
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            android:id="@+id/vLineOldPassword"
            style="@style/Line" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/black0"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/please_input_new_password"
                android:padding="20dp" />
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            android:id="@+id/vLineNewPassword"
            style="@style/Line" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/black0"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/etNewPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/please_input_new_password_again"
                android:padding="20dp" />
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            android:id="@+id/vLineNewPasswordAgain"
            style="@style/Line" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autoLinearLayout>
